bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:3: error: ')' expected but integer literal found.
    case ((false,<0, >0) => return true
                  ^